# blerpc-android

./: .gitignore  .travis-ci.yml  .travis.yml  BUILD.bazel  README.md  SwiftBleRpcLibrary.podspec  WORKSPACE  build.gradle  settings.gradle
SwiftBleModule/: Podfile
SwiftBleModule/BleModule/: AbstractService.swift  BleAbstractService.swift  BleDevice.swift  BleModule.h  BleOperationHandler.swift  BleOperationIdentifier.swift  BleWorker.swift  DisposableUUID.swift  ProtoParser.swift  ServiceHandler.swift
SwiftBleModule/BleModule.xcodeproj/: project.pbxproj
SwiftBleModule/BleModule.xcworkspace/: contents.xcworkspacedata
SwiftBleModule/BleModuleTests/: ProtoParserTests.swift
SwiftBleRpcLibrary/: Podfile
SwiftBleRpcLibrary/SwiftBleRpc/: BlePeripheral.swift  BleRpcService.swift  BleServiceDriver.swift  BleWorker.swift  ProtoParser.swift  SwiftBleRpc.h
SwiftBleRpcLibrary/SwiftBleRpc.xcodeproj/: project.pbxproj
SwiftBleRpcLibrary/SwiftBleRpc.xcworkspace/: contents.xcworkspacedata
SwiftBleRpcLibrary/SwiftBleRpcTests/: BleRpcTests.swift  BleServiceDriverTest.swift  DataMatchable.swift  ProtoParserTests.swift  TestBleRpcServiceTest.swift
SwiftBleRpcLibrary/ci/: compile_proto.sh
blerpc/: build.gradle
blerpcproto/: build.gradle
ci/: create-gradle-wrapper-4.6.sh  exe-from-jar.sh  generate-message-parser-plugin.sh  generate-promisekit-plugin.sh  generate-reactive-plugin.sh  generate-swift-reactive-plugin.sh  install-gradle.sh  install-protoc.sh
gradle/wrapper/: gradle-wrapper.properties
linters/: ci-sections.json  install-linters.sh  linters-generator  run-linters.sh  tags.json
linters/configs/: android-lint.build.gradle  checkstyle.build.gradle  findbugs.build.gradle  yamllint.yml
linters/install/: dockerfile-check.sh  google-java-format.sh  protoclint.sh  shellcheck.sh  xmllint.sh  yamllint.sh
linters/run/: android-lint.sh  checkstyle.sh  dockerfile-check.sh  findbugs.sh  google-java-format.sh  protoclint.sh  shellcheck.sh  yamllint.sh
linters/templates/: gitlab-ci.yml.tmpl  install.sh.tmpl  run.sh.tmpl
message-parser/: build.gradle
message-parser-test/tests/: check_generated_service.sh  end-to-end-tests.sh
promisekit-blerpc/: build.gradle
promisekit-blerpc-test/tests/: check_generated_service.sh  end-to-end-tests.sh
reactive-blerpc/: build.gradle  settings.gradle
reactive-blerpc-test/: build.gradle
reactive-blerpc-test/tests/: check_generated_service.sh  check_generated_service_deprecated.sh  (+3 more)
testlib/: build.gradle
(+105 files in other folders)
